Examples of new features added to Java 12